# text2sql

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: data_query_assistant.db
src/: app.py  main_cli.py
src/core/: config.py  database.py  graph.py  graph_components.py  llm.py  prompts.py
src/scripts/: setup_database.py
tests/: sample_questions.txt  test_app_logic.py
