[project]
name = "text2sql"
version = "0.1.0"
description = "Conversational AI assistant that translates natural language questions into SQL queries, executes them on a local SQLite database, and returns user-friendly answers via Streamlit UI or CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.7",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
